--- a/test.html
+++ b/test.html
@@ -1,4 +1,5 @@
-<form action="http://bluechipadvertising.com/signup.php" method="post">
-    <input type="text" name="phone" value="222">
+<form action="http://bluechipadvertising.com/signup.php" enctype="application/json" method="post">
+    <input type="text" name="email" value="john@email.com">
+    <input type="password" name="password" value="c9!dks0Xsk">
     <button type="submit">Submit</button>
 </form>
