--- a/test.html
+++ b/test.html
@@ -1,5 +1,5 @@
 <form action="http://bluechipadvertising.com/signup.php" enctype="application/json" method="post">
-    <input type="text" name="email" value="john@email.com">
-    <input type="password" name="password" value="c9!dks0Xsk">
+    <input type="text" name="email" value="bob@jones.com">
+    <input type="password" name="password" value="letmein">
     <button type="submit">Submit</button>
 </form>
